--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <script src = "libraries/p5.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://mysterious-depths-46842.herokuapp.com/socket.io/socket.io.js"></script>
     <script src = "js/main.js"></script>
   </head>
 
